--- a/artikulua.tex
+++ b/artikulua.tex
@@ -95,7 +95,7 @@ IXA NLP Group, University of the Basque Country UPV/EHU\\
 %\simplesumm{} % Simple summary
 
 % Abstract (Do not insert blank lines, i.e. \\)
-\abstract{Social networks like Twitter are taking more and more importance nowadays, creating new ways of communication. They are also useful tools for social and linguistic research based on social interaction using such networks as there are massive amounts of public data available. The availability of this data is particularly important for less resourced languages, allowing to apply current Natural Language Processing techniques to large amounts of unstructured data in order to analyze both the linguistic and social behaviour of users based on the text they generate. In this work, we aim to study the linguistic and social aspects of young and adult people’s behaviour based on their tweets' contents and the social relations that arise from them. With this objective in mind, we have gathered over 10 million tweets written in Basque from more than 8000 users. First, we extracted and analyzed the crawled data to find the most popular topics. Then we classified each user in terms of its life stage (young/adult) by establishing whether the writing style of the tweets is formal or informal. Several classification and topic modelling methods, both supervised and unsupervised, have been applied, offering each of them different insights with respect to the feasibility of the task with the available data. Second, we established the relations that emerge between the users based on their retweets, characterizing also the various communities that emerge from the analysis of the data. We conclude that the using large amounts of unstructured data provided by Twitter facilitates social research using computational techniques such as Natural Language Processing, giving the opportunity both to segment communities based on demographic characteristics and to discover how they interact or relate to them.}
+\abstract{Social networks like Twitter are taking more and more importance nowadays, creating new ways of communication. They are also useful tools for social and linguistic research based on social interaction using such networks as there are massive amounts of public data available. The availability of this data is particularly important for less resourced languages, allowing to apply current Natural Language Processing techniques to large amounts of unstructured data in order to analyze both the linguistic and social behaviour of users based on the text they generate. In this work, we aim to study the linguistic and social aspects of young and adult people’s behaviour based on their tweets' contents and the social relations that arise from them. With this objective in mind, we have gathered over 10 million tweets written in Basque from more than 8000 users. First, we classified each user in terms of its life stage (young/adult) by establishing whether the writing style of the tweets is formal or informal. Several classification methods, both supervised and unsupervised, have been applied, offering each of them different insights with respect to the feasibility of the task with the available data. Second, we applied topic modelling techniques to the personal tweets to find the most popular topics according to life stages. Third, established the relations that emerge between the users based on their retweets, characterizing also the various communities that emerge from the analysis of the data. We conclude that the using large amounts of unstructured data provided by Twitter facilitates social research using computational techniques such as Natural Language Processing, giving the opportunity both to segment communities based on demographic characteristics and to discover how they interact or relate to them.}
 
 % Keywords
 \keyword{Social Informatics; Social Networks; Topic Modelling; Relations; Less Resourced Languages; Text Classification; Information Extraction; Natural Language Processing}
@@ -122,7 +122,7 @@ IXA NLP Group, University of the Basque Country UPV/EHU\\
 
 In the last few years Twitter has become one of the most used social networks, creating new ways of consuming information but also of communicating and creating both leisure- and work-related explicit relationships. Furthermore, such relationships may be formed implicitly via the information we shared with our followers via retweets. Nowadays Twitter has become a source of spontaneously generated textual data for many human languages, including less resource languages such as Basque. Thus, this data is becoming more and more useful to do social research \cite{nguyen2016computational,rosenthal2017semeval,baldwin2015shared} which may complement traditional methods traditionally used in sociology. Furthermore, Twitter allows to obtain massive amounts of textual data to apply modern techniques of Natural Language Processing (NLP) based on machine and deep learning, for tasks such as automatic analysis of opinions (Opinion Mining or Sentiment Analysis) \cite{rosenthal2017semeval,S16-1003}, Named Entity Recognition and Lexical Normalization \cite{baldwin2015shared}, fake news and rumour detection \cite{derczynski2017semeval}, among others.
 
-Taking the concept \emph{liquid society} \cite{bauman2013liquid} as a starting point, in this paper we present a multidisciplinary work that aims to contribute novel insights in social research by using and investigating techniques from Natural Language Processing. Thus, the objective of this work is to provide a detailed social and demographic-based view of the most important topics and relationships that are formed between Basque Twitter users classified by life stage (young and adult). By ``Basque Twitter users'' we refer to those users that are geolocalized in the area of the Basque Country (cultural) and that write at least the 20\% of their tweets using the Basque language. This analysis will be entirely based on the automatically collected tweets from Basque users.
+Taking the concept \emph{liquid society} \cite{bauman2013liquid} as a starting point, in this paper we present a multidisciplinary work that aims to contribute novel insights in social research by using and investigating techniques from Natural Language Processing. Thus, the objective of this work is to provide a detailed social and demographic-based view of the most important topics and relationships that are formed between the members of a specific community, namely, the community of Basque Twitter users classified by life stage (young and adult). By ``Basque Twitter users'' we refer to those users that are geolocalized in the area of the Basque Country (cultural) and that write at least the 20\% of their tweets using the Basque language. This analysis will be entirely based on the automatically collected tweets from Basque users.
 
 More specifically, the work presented in this paper will consist of the following main steps. First, we will identify the relevant Basque Twitter users. Second, a large corpus of tweets will be extracted using the identified users' timelines. Third, we will classify users in terms of life stage (adult/young) by classifying the writing style of the tweets in their timelines as \emph{formal} or \emph{informal}. This is due to the fact that we do not have metadata information about the users' age, which means that we have to somehow try to infer the life stage based on features about writing style. Five different classification methods will be investigated, including the use of machine learning techniques based on both feature-based and neural network architectures. We will use the classifier that obtains the best results in to label the large corpus of Basque tweets by their writing style thereby classifying their users in terms of \emph{young} or \emph{adult}. In the final step, this classification will be used to investigate the most relevant topics among users of Twitter writing in Basque as well as for researching the social relations that emerge between each user type (young or adult). The final result will be a comprehensive sociological picture (automatically obtained) of the most important aspects within the community of Basque users of Twitter.
 
@@ -182,19 +182,19 @@ The Twitter API was used via the tweepy package, choosing the \textit{timeline e
 
 \section{Classifying Users by Age Stage}\label{sec:class-young-users}
 
-In this section we present our work to classify Basque Twitter users as young or adult by analyzing their tweets' writing style. As we have seen in Section \ref{sec:background}, previous work includes automatic approaches to characterize users in the context of social networks and media, the most common being those related with genre and age \citep{cesare2017detection}. Our objective of developing a classifier to characterizing Basque Twitter users according to two stages of life (young/adult) is therefore placed within that research line.
+In this section we present our work to classify Basque Twitter users as young or adult by analyzing their tweets' writing style. As we have seen in Section \ref{sec:background}, previous work includes automatic approaches to infer demographic characteristics in the context of social networks and media, the most common being those related with genre and age \citep{cesare2017detection}. Our objective of developing a classifier to characterizing Basque Twitter users according to two stages of life (young/adult) is therefore placed within that research line.
 
-Furthermore, Section \ref{sec:background} also shows that most of previous work addresses the problem of classifying age stages using supervised machine learning techniques. This implies that some training data must be annotated according to the age or age stage of each user. Moreover state of the art  results indicate that classifying by age stages allows to obtain better results than when the problem is formulated in terms of age ranges \citep{nguyen2013old}. This seems to be due to the fact that shared experiences are easier to relate along time by using age stages rather than age ranges \citep{nguyen2016computational,eckert2017age}. Therefore, in this work we decided to focus on classifying users in terms of two general age stages, namely, young and adult.
+Furthermore, Section \ref{sec:background} also shows that most of previous work addresses the problem of classifying age stages using supervised machine learning techniques. This implies that some training data must be annotated according to the age or age stage of each user. Moreover, state of the art results indicate that classifying by age stages allows to obtain better results than when the problem is formulated in terms of age ranges \citep{nguyen2013old}. This seems to be due to the fact that shared experiences are easier to relate along time by using age stages rather than age ranges \citep{nguyen2016computational,eckert2017age}. Therefore, in this work we decided to focus on classifying users in terms of two general age stages, namely, young and adult.
 
 However, this decision encountered an early methodological problem. In order to annotate tweets written in Basque according to the age stages of their authors it is obviously necessary to have available some data providing such information. Unfortunately, for the large majority of users from which we mined tweets this information is not available. Thus, our decision to overcome this problem consisted of focusing on the information available on the tweets themselves by taking into account writing style features. After all, most of the previous work widely uses writing style based features in order to classify users in terms of age stages \citep{rao2010classifying,al2012homophily,nguyen2013old,morgan2017predicting}.
 
-It has been suggested that adults tend to use more conventional language \cite{nguyen2013old} whereas for young people it is more common to display repetitions and out of dictionary words \citep{rao2010classifying,rosenthal2011age,morgan2017predicting}. Generalizing on this idea we will assume that writing style changes according to the age of the twitter user. In other words, we will consider that \emph{adult writing style} is more formal whereas young people's style can be seen as more informal. Therefore, we will be classifying users as young/adult by classifying their tweets in terms of formal or informal language.
+It has been suggested that adults tend to use more conventional language \cite{nguyen2013old} whereas for young people it is more common to display repetitions and out of vocabulary words \citep{rao2010classifying,rosenthal2011age,morgan2017predicting}. Generalizing on this idea, we will assume that writing style changes according to the age of the Twitter user. In other words, we will consider that \emph{adult writing style} is more formal whereas young people's style can be seen as more informal. Therefore, we will be classifying users as young/adult by classifying their tweets in terms of formal or informal language.
 
 \subsection{Experimental Framework}\label{sec:exper-fram}
 
 Following the setting established above, we will address the problem of classifying each tweet as \emph{formal} or \emph{informal} by means of several approaches. First, we will apply a statistical method based on perplexity \cite{gamallo2017language}. Second, we will experiment with several supervised methodologies: (i) a baseline method using sparse, \emph{one-hot} word representations \cite{pedregosa2011scikit}; (ii) a feature-based method using word representations as continuous word vectors, namely, word embeddings, on top of the baseline developed in (i) \cite{mikolov2013distributed,pennington-etal-2014-glove,mikolov-etal-2018-advances}; (iii) an off-the-shelf system which uses clustering features for representing the documents \cite{agerri2016robust,agerri2019language} and (iv), a deep learning approach leveraging character contextual word embeddings and a neural network architecture \cite{akbik2018contextual}.
 
-We will develop a classifier with each of the methods listed above and evaluate it on a held-out, gold-standard dataset manually annotated at tweet level for the categories of \emph{formal} and \emph{informal}. The method that obtains the best results in the experiments will be then used to annotate the 6 million tweets obtained thereby classifying their authors as \emph{young} or \emph{adult}. In this sense, users will be classified according to the writing style of the tweets in their timelines.
+We will develop a classifier with each of the methods listed above and evaluate it on a held-out, gold-standard dataset manually annotated at tweet level for the categories of \emph{formal} and \emph{informal}. The method that obtains the best results in the experiments will be then used to annotate personal tweets of the 6 million Heldugazte Corpus (see Table \ref{tab:useful-data}) thereby classifying their authors as \emph{young} or \emph{adult}. In this sense, users will be classified according to the writing style of the tweets in their timelines.
 
 In the rest of this section we will describe the process of manual annotation of the training and evaluation data. After that, we describe the configuration settings of each of the systems used or implemented for the experiments.
 
@@ -216,7 +216,7 @@ In order to focus on learning to classify tweets according to writing style, we 
   \label{tab:gold-corpus}
 \end{table}
 
-To manually label the tweets, a qualitative methodology was followed: all those tweets that contained out of vocabulary words or colloquial expressions were classified as informal. This methodology has been motivated by previous work on classifying formal and colloquial tweets \cite{gonzalez2015analysis}. Table \ref{tab:gold-corpus} shows the main features of our manually annotated dataset. For the experiments described in the next four subsections, we split the gold standard corpus in three sets, leaving 65\% for training and \%35 for testing\footnote{The Heldugazte gold-standard corpus is publicly available at \url{https://github.com/ixa-ehu/heldugazte-corpus}.}. In the following we present two examples of the type of tweets we classify in this work. In both cases it can be seen the differences in writing style. Thus, in the informal tweets appear dialectal and/or slang forms (ein, examin, bau, det), whereas the formal tweet displays quite a standard Basque grammar.
+To manually label the tweets, a qualitative methodology was followed: all those tweets that contained out of vocabulary words or colloquial expressions were classified as informal. This methodology has been motivated by previous work on classifying formal and colloquial tweets \cite{gonzalez2015analysis}. Table \ref{tab:gold-corpus} shows the main features of our manually annotated dataset. For the experiments described in the next five subsections, we split the gold standard corpus in three sets, leaving 65\% for training and \%35 for testing\footnote{The Heldugazte gold-standard corpus is publicly available at \url{https://github.com/ixa-ehu/heldugazte-corpus}.}. In the following we present two examples of the type of tweets we classify in this work. In both cases it can be seen the differences in writing style. Thus, in the informal tweets appear dialectal and/or slang forms (ein, examin, bau, det), whereas the formal tweet displays quite a standard Basque grammar.
 
 \begin{itemize}
 \item[(1)] \textbf{Informal tweet}: ``inoizz ezdet ein mateko examin bau au baino okerro''\footnote{Informal: This is worst exam I have ever done.}
@@ -260,7 +260,7 @@ with an increment of 0.1 as threshold. Third, we computed precision, recall and 
 % \caption{Obtaining the optimal threshold value on the training data.}\label{fig:threshold}
 % \end{figure}
 
-Table \ref{tab:perplexitytrain} displays the results of classifying the tweets in the training data using perplexity-based distance using the value 4.4 as threshold. The obtained overall accuracy using 4.4 as threshold was 0.831.
+Table \ref{tab:perplexitytrain} displays the results of classifying the tweets in the training data using perplexity-based distance with threshold value at 4.4. The obtained overall accuracy using 4.4 as threshold was 0.831.
 
 \begin{table}[H]
   \centering
@@ -383,8 +383,8 @@ In order to finish our experiments, we used the full training set for the system
     & & Formal & 35 & 0.848 & 0.806 & 0.826 \\ \hline \hline
     \multirow{2}{*}{SVM-FastText} & \multirow{2}{*}{} & Informal &  &  &  &  \\
     & & Formal & &  &  &  \\ \hline \hline
-    \multirow{2}{*}{IXA pipes} & \multirow{2}{*}{0.886} & Informal & 20 & 0.882 & 0.881 & 0.882 \\
-    & & Formal & 20 & 0.889 & 0.888 & 0.889 \\ \hline \hline
+    \multirow{2}{*}{IXA pipes} & \multirow{2}{*}{0.886} & Informal & 20 & 0.882 & 0.881 & \textbf{0.882} \\
+    & & Formal & 20 & 0.889 & 0.888 & \textbf{0.889} \\ \hline \hline
     \multirow{2}{*}{Flair} & \multirow{2}{*}{0.866} & Informal & 22 & 0.869 & 0.858 & 0.863 \\
     & & Formal & 24 & 0.868 & 0.877 & 0.872 \\ \hline
  \end{tabular}
@@ -392,23 +392,23 @@ In order to finish our experiments, we used the full training set for the system
   \label{tab:testresults}
 \end{table}
 
-It should be noticed that we did not implement any specific features for the experiments with our gold standard data. The main reason is that we wanted to avoid including any features that will lead to the models overfitting to the training data. By doing so, we were aiming to develop general, robust classifiers that hopefully will be equally competitive for other languages, text genres and tasks. We believe that the strong results obtained by the IXA pipes and the Flair system, and despite the lack of any specific tuning to the data, show the generalization power of using combined word representations. Furthermore, it is particularly interesting the fact that the neural network architecture provided by Flair performed so well with such a small training data. We believe that the developed classifiers are good enough to use them to classify the large dataset of 6M tweets in terms of the \emph{formal} and \emph{informal} classes. We decide to use the IXA pipes model due to the results obtained and its lower requirements in terms of memory and computing power.
+It should be noticed that we did not implement any specific features for the experiments with our gold standard data. The main reason is that we wanted to avoid including any features that might cause overfitting to the training data. By doing so, we were aiming to develop general, robust classifiers that hopefully will be equally competitive for other languages, text genres and tasks. We believe that the strong results obtained by the IXA pipes and the Flair system, and despite the lack of any specific tuning to the data, show the generalization power of using combined word representations. Furthermore, it is particularly interesting the fact that the neural network architecture provided by Flair performed so well with such a small training data. We believe that the developed classifiers are good enough to use them to classify the personal tweets in the 6M Heldugazte corpus in terms of the \emph{formal} and \emph{informal} classes. We decide to use the IXA pipes model due to the results obtained and its lower requirements in terms of memory and computing power.
 
 \subsection{Labelling the Large Corpus}\label{sec:apl}
 
-The young/adult classifier developed in the previous section will allow us to compare the main features of those two life stages by taking into account the topics that appear on users' tweets and the relations that arise between them. After training the best performing model of \emph{ixa-pipe-doc} described in Section \ref{sec:ixa} and evaluated in Section \ref{sec:experimental-results} on the 1000 tweets of the \emph{full gold-standard corpus}, we proceed to tag every tweet in the Large corpus. We only used for classification the (multilingual) timelines of those users which contained at least 10 tweets written in the Basque language, namely, 7.087 users out of the 7.980 that we crawled in Section \ref{sec:data-extraction}.
+The young/adult classifier developed in the previous section will allow us to compare the main features of those two life stages by taking into account the topics that appear on users' tweets and the relations that arise between them. After training the best performing model of \emph{ixa-pipe-doc} described in Section \ref{sec:ixa} and evaluated in Section \ref{sec:experimental-results} on the 1000 tweets of the \emph{full gold-standard corpus}, we proceed to tag the personal tweets in the Heldugazte corpus (see Table \ref{tab:useful-data}). We only used for classification the (multilingual) timelines of those users which contained at least 10 tweets written in the Basque language, namely, 7.087 users out of the 7.980 that we crawled in Section \ref{sec:data-extraction}.
 
-Given that the classifier labels each tweet as \emph{formal} or \emph{informal}, we decided, after some qualitative error analysis, that those users whose timelines in which more than 45\% of the tweets are labelled as \emph{informal} be considered as young, and adult otherwise. Following this method, we obtained 5.508 which were adult users and 1.579 labelled as young users. Details of the tagging results are displayed in Table \ref{tab:largecorpusdata}. Even though the resulting classification is quite unbalanced that is not a problem because we will perform our analysis of each type of user independently.
+Given that the classifier labels each tweet as \emph{formal} or \emph{informal}, we decided, after some qualitative error analysis, that those users whose timelines in which more than 45\% of the tweets are labelled as \emph{informal} be considered as young, and adult otherwise. Thus, after classifying users in terms of young and adult, we obtained 5,508 which were adult users and 1,579 labelled as young users, applying the obtained label to every tweet and retweet of each user's timeline, namely, to every tweet in the Large Corpus. Details of the tagging results are displayed in Table \ref{tab:largecorpusdata}. Even though the resulting classification is quite unbalanced that is not a problem because we will perform our analysis of each type of user independently.
 
 \begin{table}[H]
   \centering
   \begin{tabular}{lll} \hline
      & Adult & Young \\ \hline \hline
-    Users & 5.508 & 1.579 \\
-    Tweets (personal) & 4.046.512 & 1.128.124 \\
-    Retweets  & 4.345.500 & 963.668 \\
-    Tweets in Basque (Topics) & 2.634.534 & 530.226 \\
-    Retweets in Basque (Relations) & 2.421.058 & 400.448 \\ \hline
+    Users & 5,508 & 1,579 \\
+    Tweets (personal) & 4,046,512 & 1,128,124 \\
+    Retweets  & 4,345,500 & 963,668 \\
+    Tweets in Basque (Topics) & 2,634,534 & 530,226 \\
+    Retweets in Basque (Relations) & 2,421,058 & 400,448 \\ \hline
   \end{tabular}
   \caption{Classifying tweets in Large Corpus in terms of age stage (young/adult).}
   \label{tab:largecorpusdata}
@@ -430,11 +430,11 @@ The first issue that arises when looking at the adults' tweets is that more than
     \includegraphics[width=\linewidth]{birtxio_heldu}
     \caption{Adult retweets.}
   \end{subfigure}
-  \caption{Adults in the Large Corpus: 5.508 users.}
+  \caption{Adults in the Large Corpus: 5,508 users.}
   \label{fig:adults}
 \end{figure}
 
-If we take a look at the tweets written only in Basque, we find that 2.634.534 tweets have been published, containing more than 32M tokens. Figure  \ref{fig:txio luze held} shows their distribution according to their length in tokens. The average tweet contains 12 tokens. Standard deviation with respect to the average is 5.65. Furthermore, median corresponds to 12, mode being 14 token (more than 200K tweets).
+If we take a look at the tweets written only in Basque, we find that 2,634,534 tweets have been published, containing more than 32M tokens. Figure  \ref{fig:txio luze held} shows their distribution according to their length in tokens. The average tweet contains 12 tokens. Standard deviation with respect to the average is 5.65. Furthermore, median corresponds to 12, mode being 14 token (more than 200K tweets).
 
 \begin{figure}[H]
   \centering
@@ -445,7 +445,7 @@ If we take a look at the tweets written only in Basque, we find that 2.634.534 t
 
 \subsubsection{Analyzing Young Twitter Users}
 
-The young users corpus contains just one quarter in size with respect to the corpus of adult users. In this case, it can be seen that there are fewer retweets (963.668) than original personal tweets (1.128.124). It is perhaps more noticeable the fact that the use of Basque is less common between young users: 18\% lower for tweets and 24\% lower for retweets. As it is expected, the use of Spanish is higher between young users, reaching 47\% for retweets and 34\% for personal tweets. The data in Figure \ref{fig:gazte txbtx} shows that Basque is less used between young users of Twitter.
+The young users corpus contains just one quarter in size with respect to the corpus of adult users. In this case, it can be seen that there are fewer retweets (963,668) than original personal tweets (1,128,124). It is perhaps more noticeable the fact that the use of Basque is less common between young users: 18\% lower for tweets and 24\% lower for retweets. As it is expected, the use of Spanish is higher between young users, reaching 47\% for retweets and 34\% for personal tweets. The data in Figure \ref{fig:gazte txbtx} shows that Basque is less used between young users of Twitter.
 
 \begin{figure}[H]
   \centering
@@ -457,11 +457,11 @@ The young users corpus contains just one quarter in size with respect to the cor
     \includegraphics[width=\linewidth]{birtxio_gazte}
     \caption{Young retweets.}
   \end{subfigure}
-  \caption{Young users in Large Corpus: 1.579 users.}
+  \caption{Young users in Large Corpus: 1,579 users.}
   \label{fig:gazte txbtx}
 \end{figure}
 
-If we take a look at the tweets written only in Basque, we find that 530.226 personal tweets have been published, containing more than 5M tokens. Figure  \ref{fig:txio luze gzt} shows their distribution according to their length in tokens. The average tweet contains 9 tokens, whereas the standard deviation with respect to the average is 5.49. Furthermore, median corresponds to 8, mode being 6 token (around 45K tweets). In general, it is noticeable the fact that young users published much shorter tweets than adults.
+If we take a look at the tweets written only in Basque, we find that 530,226 personal tweets have been published, containing more than 5M tokens. Figure  \ref{fig:txio luze gzt} shows their distribution according to their length in tokens. The average tweet contains 9 tokens, whereas the standard deviation with respect to the average is 5.49. Furthermore, median corresponds to 8, mode being 6 token (around 45K tweets). In general, it is noticeable the fact that young users published much shorter tweets than adults.
 
 \begin{figure}[H]
   \centering
@@ -481,11 +481,11 @@ The aim of this section is to detect the most frequent topics of Twitter users w
 
 Topic modeling is a commonly used tool in the field of text mining. With this technique, words are grouped or clustered according to their context, thereby generating more general contents or concepts via the clustered words and allowing to identify general topics from specific words. We apply this technique to identify the main subjects that appear in the Basque users' tweets. In order words, LDA  makes it possible to classify events that are observable in latent or hidden clusters. This is possible thanks to the many hidden features, such as the similarity of words.
 
-Before applying LDA, we need to structured the documents in our dataset. It is difficult to directly apply LDA to our data due to the short length of tweets. Thus, we decide to group the tweets by user, namely, we will create one document per user where the document will be containing every tweet published by that person \cite{hong2010empirical, zhao2011comparing}. Additionally, and considering that Basque is an agglutinative language, we decided to lemmatize the documents to reduce the number of terms that needed to be modelled. For this pre-processing step, the IXA pipes Basque lemmatizer  was used \cite{agerri2014ixa}.
+Before applying LDA, we need to structured the documents in our dataset. It is difficult to directly apply LDA to our data due to the short length of tweets. Thus, we decide to group the tweets by user, namely, we will create one document per user where the document will contain every tweet published by that person \cite{hong2010empirical, zhao2011comparing}. Additionally, and considering that Basque is an agglutinative language, we decided to lemmatize the documents to reduce the number of terms that needed to be modelled. For this pre-processing step, the IXA pipes Basque lemmatizer  was used \cite{agerri2014ixa}.
 
 LDA requires to choose a number of topics beforehand. After several tests, 20 topics were used for the adults documents and 12 for the young ones. The different in topics is coherent with the number of tweets for each of user type. Although there is not a fixed correct number of topics, this choice affects the interpretability of the LDA results \cite{binkley2014understanding,steyvers2007probabilistic}. Thus, it is interesting to achieve the most dispersed possible model so that the overlap between topics is kept to a minimum. Furthermore, the resulting topics should correlate with social reality which is latent in the real data.
 
-The results of applying LDA are displayed using LDAvis \cite{sievert2014ldavis}, which allows an easy interpretation of each topic. As it is customary, the identity or meaning of the topic is determined by the words of which it is composed \cite{binkley2014understanding}. Thus, Table \ref{tab:adult-tp} shows the topics obtained for the adult users whereas Table \ref{tab:young-tp} lists the topics for the young users.
+The results of applying LDA are displayed using LDAvis \cite{sievert2014ldavis}, which offers an easy interpretation of each topic. As it is customary, the identity or meaning of the topic is determined by the words of which it is composed \cite{binkley2014understanding}. Thus, Table \ref{tab:adult-tp} shows the topics obtained for the adult users whereas Table \ref{tab:young-tp} lists the topics for the young users.
 
 \begin{table}[H]
   \centering
@@ -621,7 +621,7 @@ Table \ref{tab:tab harr hld} shows the five main subgroups derived from the grap
 
 \item \textbf{News} (23.77\%): This group, related to news, consists of almost a quarter of all users. Most of the nodes of this subgroup are related to the media, specially several users related to the Basque public television (EITB).
 
-\item \textbf{Basque language} (15.34\%): In the 3rd subgroup, there are topics related to the Basque language, such as communication media in Basque (@zuzeu, @Gaztezulo, @ArabakoALEA), associations for the promotion of the Basque language (@AEK\_eus, @EHEbizi...) as well as several individuals related to the Basque language (@KikeAmonarriz, @KoldoTellitu, @MertxeMugika).
+\item \textbf{Basque language} (15.34\%): In the third subgroup, there are topics related to the Basque language, such as communication media in Basque (@zuzeu, @Gaztezulo, @ArabakoALEA), associations for the promotion of the Basque language (@AEK\_eus, @EHEbizi...) as well as several individuals related to the Basque language (@KikeAmonarriz, @KoldoTellitu, @MertxeMugika).
 
 \item \textbf{Music and GED} (13.56\%): In the fourth subgroup there is a special phenomenon, since it brings together two different groups in the same subgroup. The first one is related to music, since we can appreciate different users related to the music scene (@EsneBeltza, @ZuriHidalgo, @ZeEsatek, @40minuturock, @hesiantaldea, @ItzrrSemeak ...). The second one is related to the users of the social movement ``Gure Esku Dago'' (@GoierrikoGED, @GEDTolosaldea, @GureEskuDagoDon ...).
 
